mejoras recomendadas y mejoras en test